# project_Clara

./: .gitignore  MANUAL_TEST_CASES_CLARA.md  README (2).md  README.md  SCC_Spesifikasi_Master.md  TEST_CONVERSATIONS_CLARA.md  clara-vs-sales-command-center-comparison.md  clara_db.dump  clara_db_backup.sql  clara_db_backup_utf8.sql  package.json
clara-backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  main.py  package-lock.json  pyproject.toml
clara-backend/alembic/: env.py
clara-backend/app/: main.py
clara-backend/samples/: sample-whatsapp.txt
clara-backend/scripts/: bootstrap_owner.py  create_owner.py  import_clara_knowledge.py  migrate_legacy_roles.py  setup_local_environment.py
clara-backend/tests/: conftest.py  test_auth_access_control.py  test_chat_review_cases.py  test_customer_identity.py  test_extension_distribution.py  test_extension_snapshot_sync.py  test_import_clara_knowledge.py  test_knowledge_update_proposals.py  test_kpi_command_center.py  test_lead_discipline_logs.py  test_leads_crm.py  test_manager_insights.py  test_marketing_phase4.py  test_operational_alerts.py  test_operational_scorecards.py  test_ops_notifications.py  test_performance_actions.py  test_performance_snapshots.py  test_reply_benchmark_scenarios.py  test_reply_observability.py  test_reply_suggestion_schema.py  test_sales_approval_queue.py  test_sales_scope_enforcement.py  test_sales_structure.py  test_sales_worklist.py  test_security_hygiene.py  test_sent_messages.py  test_sgcc_integrations.py  test_telegram_parser.py  (+3 more)
(+318 files in other folders)
